[tool.poetry]
name = "intertop"
version = "0.1.0"
description = ""
authors = ["Irina Kirillova <{ID}+{username}@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selene = "^2.0.0rc4"
appium-python-client = "^2.8.1"
pytest = "^7.2.2"
pytest-xdist = "^3.2.1"
allure-pytest = "^2.12.1"
requests = "^2.28.2"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
